added webinar details

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <title>Register for the Webinar: &#8220;Shift Left&#8221; security at operations&#63; How does that work&#63;
+    <title>RSVP for the Webinar: Equifax then and Log4j now - reveal and seal off attack paths with Deepfence
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style type="text/css">
@@ -27,10 +27,10 @@
             style="border-collapse: collapse; border: 1px solid #cccccc; table-layout: fixed">
             <tr>
                 <td align="center" bgcolor="#0f143d" style="padding: 0 0 0 0;">
-                    <a href="https://hubs.ly/H0_q-5P0">
+                    <a href="https://hubs.ly/Q011Jgfn0">
                         <img width="100%"
-                            src="https://user-images.githubusercontent.com/79061264/142295210-c2bd1dc6-b543-439b-ac1f-242c609db30b.png"
-                            alt="Webinar on Shift Left security at operations" style="display: flex;" /></a>
+                            src="https://user-images.githubusercontent.com/79061264/148594641-3e191687-78a6-4c81-8b96-851fde79ff64.png"
+                            alt="Webinar on mitigating log4j and more" style="display: flex;" /></a>
                 </td>
             </tr>
             <tr>
@@ -40,19 +40,25 @@
                         <tr>
                             <td colspan="2"
                                 style="color: #153643; width: 100%; font-family: Arial, sans-serif; font-size: 16px; line-height: 24px; padding: 20px 0 30px 0;">
-                                <p style="margin: 0;">The massive focus on DevOps-centric security solutions has left
-                                    operations teams behind. The developers get all the cool tools; operations are left
-                                    with legacy solutions that fit poorly when securing modern, multi-cloud,
-                                    multi-modality applications at runtime. So, what can ops teams do?<br><br><a
-                                        href="https://hubs.ly/H0_q-5P0" target="_blank">Join the live webinar on Dec 2 @ 10 AM PT</a> to
-                                        learn how to secure your apps <em>through</em> production.<br><br>In
-                                    less than 45 minutes you will learn how to:
+                                <p style="margin: 0;">It's been almost five long years since Equifax, but the heist
+                                    continues. Age-old security apparatus provide insufficient protection for modern
+                                    times. WAFs, EDRs, IPS, and vulnerability scanners - we had them then and now, but
+                                    we are still vulnerable.<br><br>
+                                    The Log4j vulnerability is one of many that an attacker can exploit to gain an
+                                    initial foothold in your applications. But the Log4j exploit alone is not the end of
+                                    the story; it’s just one scene in the bigger heist. Once an initial breach is
+                                    achieved, a wily attacker will then use it to spread laterally and gain more control
+                                    to identify targets and install attack tools. So what can you do?<br><br>
+                                    <a href="https://hubs.ly/Q011Jgfn0" target="_blank">Join the live webinar on Jan 13
+                                        @
+                                        10 AM PT</a> to
+                                    see how to reveal and seal off attack paths.<br><br>In under an hour you will
+                                    learn how to:
                                 <ul>
-                                    <li>Get started with ThreatMapper, an emerging open source platform for observing
-                                        and securing applications in production</li>
-                                    <li>Scan and understand the security posture of an application in Kubernetes</li>
-                                    <li>Collaborate with DevOps to ensure that your applications remain secure long
-                                        after they are deployed</li>
+                                    <li>Find production vulnerabilities such as log4j and others</li>
+                                    <li>Capture the subtle traces attack attempts leave behind </li>
+                                    <li>Piece together the story of a successful attack</li>
+                                    <li>Neutralize attacks in real time</li>
                                 </ul>
                                 </p>
                             </td>
@@ -64,7 +70,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                     <tr>
                         <td align="center">
-                            <a href="https://hubs.ly/H0_q-5P0" target="_blank"><img style="max-width: 100%"
+                            <a href="https://hubs.ly/Q011Jgfn0" target="_blank"><img style="max-width: 100%"
                                     src="https://user-images.githubusercontent.com/79061264/124685820-e0986600-de86-11eb-8810-1aa36ed022ec.png"
                                     alt="register button"></a>
                         </td>
