added html code for en dash

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <title>RSVP for the Webinar: Equifax then and Log4j now - reveal and seal off attack paths with Deepfence
+    <title>RSVP for the Webinar: Equifax then and Log4j now &#8211 reveal and seal off attack paths with Deepfence
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style type="text/css">
