removed target blank

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     the story; it’s just one scene in the bigger heist. Once an initial breach is
                                     achieved, a wily attacker will then use it to spread laterally and gain more control
                                     to identify targets and install attack tools. So what can you do?<br><br>
-                                    <a href="https://hubs.ly/Q011Jgfn0" target="_blank">Join the live webinar on Jan 13
+                                    <a href="https://hubs.ly/Q011Jgfn0">Join the live webinar on Jan 13
                                         @
                                         10 AM PT</a> to
                                     see how to reveal and seal off attack paths.<br><br>In under an hour you will
