--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <table align="center" border="0" width="100%" cellpadding="0" cellspacing="0" width="600"
             style="border-collapse: collapse; border: 1px solid #cccccc; table-layout: fixed">
             <tr>
-                <td align="center" bgcolor="#0f143d" style="padding: 0 0 0 0;">
+                <td align="center" bgcolor="#461859" style="padding: 0 0 0 0;">
                     <a href="https://hubs.ly/Q011Jgfn0">
                         <img width="100%"
                             src="https://user-images.githubusercontent.com/79061264/148594641-3e191687-78a6-4c81-8b96-851fde79ff64.png"
