--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <table align="center" border="0" width="100%" cellpadding="0" cellspacing="0" width="600"
             style="border-collapse: collapse; border: 1px solid #cccccc; table-layout: fixed">
             <tr>
-                <td align="center" bgcolor="#3A1C5C" style="padding: 0 0 0 0;">
+                <td align="center" bgcolor="#232A58" style="padding: 0 0 0 0;">
                     <a href="https://hubs.ly/Q011Jgfn0">
                         <img width="100%"
                             src="https://user-images.githubusercontent.com/79061264/148594641-3e191687-78a6-4c81-8b96-851fde79ff64.png"
@@ -70,7 +70,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse: collapse;">
                     <tr>
                         <td align="center">
-                            <a href="https://hubs.ly/Q011Jgfn0" target="_blank"><img style="max-width: 100%"
+                            <a href="https://hubs.ly/Q011Jgfn0"><img style="max-width: 100%"
                                     src="https://user-images.githubusercontent.com/79061264/124685820-e0986600-de86-11eb-8810-1aa36ed022ec.png"
                                     alt="register button"></a>
                         </td>
