added 2 at the end of log4j in the bullets

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     see how to reveal and seal off attack paths.<br><br>In under an hour you will
                                     learn how to:
                                 <ul>
-                                    <li>Find production vulnerabilities such as log4j and others</li>
+                                    <li>Find production vulnerabilities such as log4j2 and others</li>
                                     <li>Capture the subtle traces attack attempts leave behind </li>
                                     <li>Piece together the story of a successful attack</li>
                                     <li>Neutralize attacks in real time</li>
